--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardCornerRadius="28dp"
-    app:cardElevation="0dp">
+    app:cardElevation="0dp"
+    app:strokeWidth="0dp"
+    app:strokeColor="@android:color/transparent">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,7 +22,8 @@
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:indeterminate="true" />
+            android:indeterminate="true"
+            app:indicatorColor="@color/orange"/>
 
         <TextView
             android:id="@+id/tvLoadingMessage"
