--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.main.fragments.home.HomeFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.pth.androidapp.presentation.main.fragments.home.HomeViewModel" />
+
+        <variable
+            name="uiState"
+            type="com.pth.androidapp.core.common.UiState" />
+
+        <import
+            alias="LoadingState"
+            type="com.pth.androidapp.core.common.UiState.Loading" />
+
+        <import
+            alias="SuccessState"
+            type="com.pth.androidapp.core.common.UiState.Success" />
+
+        <import
+            alias="ErrorState"
+            type="com.pth.androidapp.core.common.UiState.Error" />
+    </data>
+
+
+    <ScrollView
+        android:id="@+id/sv_home"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="HomeFragment" />
+        android:scrollbars="none"
+        tools:context=".presentation.main.fragments.home.HomeFragment"
+        tools:ignore="UselessParent">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:clipToPadding="false">
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/sliderLoading"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    app:shimmer_auto_start="true"
+                    app:visible="@{uiState instanceof LoadingState}">
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:cardCornerRadius="15dp"
+                        app:strokeWidth="0dp">
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="@color/shimmer_background" />
+                    </com.google.android.material.card.MaterialCardView>
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/vp_slide_home"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingStart="60dp"
+                    android:paddingEnd="60dp"
+                    app:visible="@{uiState instanceof SuccessState}" />
+
+                <include
+                    android:id="@+id/slider_error"
+                    layout="@layout/view_error"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="16dp"
+                    app:visible="@{uiState instanceof ErrorState}" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+    </ScrollView>
+
+</layout>
