--- a/app/src/main/res/layout/item_image_slide.xml
+++ b/app/src/main/res/layout/item_image_slide.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:adjustViewBounds="true"
@@ -8,10 +9,11 @@
     app:strokeWidth="0sp">
 
     <ImageView
-        android:id="@+id/slide_image"
+        android:id="@+id/ivSlide"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
-        android:src="@drawable/home_slide_example" />
+        android:src="@drawable/home_slide_example"
+        tools:ignore="ContentDescription" />
 
 </com.google.android.material.card.MaterialCardView>
